fixed margin spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ li {
 
 #main {
     background: white;
-    margin: 2%;
+    margin-top: 2%;
     margin-bottom: 70px;
     padding-bottom: 25px;
     border-radius: 5px;
